<resources>
    <string name="app_name">Vivid TV</string>

    <string name="splash_days">days</string>
    <string name="line_name">线路%d(%s)</string>
    <string name="exit_tip">再按一次退出</string>
    <string name="cant_play_tip">该频道无法播放</string>
    <string name="try_other_line_tip">正在尝试其他线路…</string>

    <string name="dialog_title">提示</string>
    <string name="dialog_message">需要使用手势调节亮度和音量吗？</string>
    <string name="dialog_negative_button">不需要</string>
    <string name="dialog_positive_button">设置</string>
    <string name="permission_tip">您可以根据需要前往设置页面修改权限</string>
    <string name="not_update">待更新</string>

    <string name="source_link">直播源地址</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="please_input_source_link">请输入直播源地址</string>

    <string name="source_history">直播源播放历史</string>
    <string name="source_history_empty">暂无播放记录</string>

    <string name="find_new_version">有更新啦</string>
    <string name="confirm_upgrade_apk">当前版本%s，发现了新的版本%s，是否更新？</string>
    <string name="dialog_cancel_button">不要</string>
    <string name="dialog_ok_button">好的</string>
    <string name="download_file">下载文件</string>

    <string name="no_network">没有网络，请检查您的网络设置</string>
    <string name="click_retry">点击重试</string>

    <string name="about_message">本软件的播放核心是基于B站开发的ijkplayer，基础代码fork于lvliheng的VividTV项目。这些项目都可以在Github上找到源码，作者只是在原有基础上整合并增加了一些微不足道的业务代码，希望能赢得你的喜爱。\n当前版本：%s\n项目地址：https://github.com/lzqwebsoft/VividTV</string>
</resources>
